all directives in one file, fix #188

--- a/templates/base.html
+++ b/templates/base.html
@@ -341,6 +341,7 @@
   <script src="static/app/scripts/services/noteservices.js" ></script>
   <script src="static/app/scripts/services/commentservices.js" ></script>
    <script src="static/app/scripts/services/settingservices.js" ></script>
+   <script src="static/app/scripts/directives/directives.js" ></script>
 
   <script src="static/app/scripts/app.js" ></script>
    <script src="static/app/scripts/controllers/productcontrollers.js" ></script>
