when filtering by tag result is null, display No results found, try with another filter

--- a/templates/contacts/list.html
+++ b/templates/contacts/list.html
@@ -207,7 +207,7 @@
                   </div>
                
                                   
-                </div>2013
+                </div>
               </div>
               <div class="clearfix"></div>
               </div>
