--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -39,7 +39,7 @@
                       <div class="modal-footer">
                         <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
                         
-                        <input ng-hide="isLoading" ng-click="closeTask()" type="submit" class="btn red" value="Delete this Account">
+                        <input ng-hide="isLoading" ng-click="closeTask()" type="submit" class="btn red" value="Delete this User">
                         <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
                       </div>
                   </form>
