--- a/templates/base.html
+++ b/templates/base.html
@@ -370,6 +370,7 @@
   <script src="static/app/scripts/services/caseservices.js" ></script>
   <script src="static/app/scripts/controllers/needcontrollers.js" ></script>
   <script src="static/app/scripts/directives/directives.js" ></script>
+  <script src="static/app/scripts/services/helpers.js" ></script>
 
 
   
