Hide label on opportunity and Case Modal

--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -106,14 +106,14 @@
                     </div>
                     
                     
-                    <div class="form-group">
+                    <!--div class="form-group">
                         <label  class="required col-md-3 control-label">{{_("Labels")}} </label>
                        
                         <div class="col-md-9">
                           <input type="text"  id="id_description" placeholder="Add #hashtags to categorize your cases" class="form-control" ng-model="casee.type_case">
                           
                         </div>
-                    </div>
+                    </div-->
                     
                     <hr/>
                     <p>Who can access?</p>
