--- a/templates/opportunities/list.html
+++ b/templates/opportunities/list.html
@@ -67,13 +67,13 @@
                           
                         
                     </div>
-                    <div class="form-group">
+                    <!--div class="form-group">
                         <label  class="required col-md-3 control-label">{{_("Labels")}} </label>
                        
                        <div class="col-md-9">
                           <input type="text"  id="id_description" class="form-control" ng-model="opportunity.description" placeholder="Add labels to categorize your deals">
                        </div>
-                    </div>
+                    </div-->
                     <div class="form-group">
                         <label  class="required col-md-3 control-label">{{_("Amount")}} </label>
                        
