--- a/templates/contacts/show.html
+++ b/templates/contacts/show.html
@@ -691,14 +691,14 @@
                         </div>
                       
                     </div>
-                    <div class="form-group">
+                    <!--div class="form-group">
                         <label  class="required col-md-3 control-label">{{_("Labels")}} </label>
                        
                         <div class="col-md-9">
                           <input type="text" class="form-control"  id="id_description" ng-model="casee.type_case">
                           
                         </div>
-                    </div>
+                    </div-->
                    
 
                   
