fix tagline,ontroduction bug UI on Contact, Add About on opportunity

--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -207,6 +207,7 @@
                 <div class="tabbable tabbable-custom">
                   <ul class="nav nav-tabs">
                         <li class="ng-tab" ng-class="{active: selectedTab == 1}"><a ng-click="selectedTab = 1;" >{{ _("Notes") }}</a></li>
+                        <li class="ng-tab" ng-class="{active: selectedTab == 1}"><a ng-click="selectedTab = 1;" >{{ _("Notes") }}</a></li>
                         <li class="ng-tab"  ng-class="{active: selectedTab == 2}"><a ng-click="selectedTab = 2;">{{ _("Attach Documents") }}</a></li>
                         <li class="ng-tab"  ng-class="{active: selectedTab ==3}"><a ng-click="selectedTab = 3;">{{ _("Send an Email") }}</a></li>
                   </ul>
