adding logout url fix #241

--- a/templates/base.html
+++ b/templates/base.html
@@ -129,7 +129,14 @@
                   <span class="username">
                     {{user.google_display_name}}
                   </span>
-                </a>        
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a href="{{logout_url}}">
+                      Sign Out
+                    </a>
+                  </li>
+                </ul>        
               </li>
               <!-- END USER LOGIN DROPDOWN -->
         </ul>       
