--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -285,13 +285,13 @@
                                   <span class="page-meta"><i class="icon-pencil"><a ng-click="editclosedate(opportunity)" class="btn-link addAnotherPhone" data-toggle="modal" > {{_("Edit")}} </a></i></span>
                                   
                                 </div>
-                                <p><%=opportunity.closed_date%></p>
+                                <p><%=opportunity.closed_date | date:'MMMM dd, yyyy, HH:mm'%></p>
                                 <div class="news-block-tags">
                                   <strong>{{_("Main Competitor(s)")}}</strong>
                                   <span class="page-meta"><i class="icon-pencil"><a ng-click="editcompetitor()" class="btn-link addAnotherPhone" data-toggle="modal" > {{_("Edit")}} </a></i></span>
                                   
                                 </div>
-                                <p> <%=contact.introduction%></p>
+                                <p> <%=opportunity.competitor%></p>
                                 <div class="news-block-tags">
                                   <strong>{{_("Reason Lost")}}</strong>
                                   <span class="page-meta"><i class="icon-pencil"><a ng-click="editreasonlost()" class="btn-link addAnotherPhone" data-toggle="modal" > {{_("Edit")}} </a></i></span>
@@ -330,7 +330,7 @@
                                   <span class="page-meta"><i class="icon-pencil"><a ng-click="edittype()" class="btn-link addAnotherPhone" data-toggle="modal" > {{_("Edit")}} </a></i></span>
                                   
                                 </div>
-                                <p><%=opportunity.type%></p>
+                                <p><%=opportunity.opportunity_type%></p>
                                 
                                 <div class="news-block-tags">
                                   <strong>Source</strong>
@@ -395,15 +395,15 @@
               </div>
 
               <div class="modal-body">
-                 <form id="editTagline" name="editlead" ng-submit="updateTagline(account)" class="form-horizontal"> 
+                 <form id="editTagline" name="editlead" ng-submit="updateCompetitor(opportunity)" class="form-horizontal"> 
                 
 
                   <div class="form-group">
                         <label  class="col-md-3 control-label">{{_("Competitors")}} </label>
                        
                         <div class="col-md-9">
-                          <!--textarea rows="2" cols="50"  id="id_tagline" ng-model="account.tagline"/-->
-                           <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="account.tagline"></textarea>
+                         
+                           <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="opportunity.competitor"></textarea>
 
                         </div>
                     </div>             
@@ -500,7 +500,7 @@
                         <label  class="col-md-3 control-label">{{_("Type")}} </label>
                        
                         <div class="col-md-9">
-                          <select ng-model="opportunity.type" class="form-control"><option value="">Existing Customer - Upgrade</option><option value="Existing Customer - Replacement">Existing Customer - Replacement</option><option value="Existing Customer - Downgrade">Existing Customer - Downgrade</option><option value="New Customer">New Customer</option><option value="Other">Other</option></select>
+                          <select ng-model="opportunity.opportunity_type" class="form-control"><option value="">Existing Customer - Upgrade</option><option value="Existing Customer - Replacement">Existing Customer - Replacement</option><option value="Existing Customer - Downgrade">Existing Customer - Downgrade</option><option value="New Customer">New Customer</option><option value="Other">Other</option></select>
                           
                          
                         </div>
