About Opportunity modif on opportunity type and source on UI

--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -500,7 +500,7 @@
                         <label  class="col-md-3 control-label">{{_("Type")}} </label>
                        
                         <div class="col-md-9">
-                          <select ng-model="opportunity.opportunity_type" class="form-control"><option value="">Existing Customer - Upgrade</option><option value="Existing Customer - Replacement">Existing Customer - Replacement</option><option value="Existing Customer - Downgrade">Existing Customer - Downgrade</option><option value="New Customer">New Customer</option><option value="Other">Other</option></select>
+                          <select ng-model="opportunity.opportunity_type" class="form-control"><option value="">--None--</option><option value="Existing Customer - Upgrade">Existing Customer - Upgrade</option><option value="Existing Customer - Replacement">Existing Customer - Replacement</option><option value="Existing Customer - Downgrade">Existing Customer - Downgrade</option><option value="New Customer">New Customer</option><option value="Other">Other</option></select>
                           
                          
                         </div>
@@ -532,7 +532,7 @@
                         <label  class="col-md-3 control-label">{{_("Source")}} </label>
                        
                         <div class="col-md-9">
-                          <select ng-model="opportunity.source" class="form-control"><option value="">Social Media</option><option value="Web Source">Web Site</option><option value="Phone Inquiry">Phone Inquiry</option><option value="Partner Referral">Partner Referral</option><option value="Purchased List">Purchased List</option><option value="Other">Other</option></select>
+                          <select ng-model="opportunity.source" class="form-control"><option value="">--None--</option><option value="Social Media">Social Media</option><option value="Web Source">Web Site</option><option value="Phone Inquiry">Phone Inquiry</option><option value="Partner Referral">Partner Referral</option><option value="Purchased List">Purchased List</option><option value="Other">Other</option></select>
                           
                          
                         </div>
