working on contacts.get

--- a/templates/contacts/list.html
+++ b/templates/contacts/list.html
@@ -164,7 +164,7 @@
                     <div class="desc">
                     <div class="row margin-bottom-5">
                       <div class="col-md-12">
-                        <span ng-show="contact.title"><a  class="desc" ng-show="contact.title" href="/#/search/type:Contact <%=contact.title%>">#<%=contact.title%></a></span><span ng-show="contact.account_name"> <span ng-show="contact.account_name + contact.title" class="contact-title">at </span> <a  class="desc" href="/#/search/type:Contact <%=contact.account_name%>">#<%=contact.account_name%></a></span>
+                        <span ng-show="contact.title"><a  class="desc" ng-show="contact.title" href="/#/search/type:Contact <%=contact.title%>">#<%=contact.title%></a></span><span ng-show="contact.account.name"> <span ng-show="contact.account.name + contact.title" class="contact-title">at </span> <a  class="desc" href="/#/search/type:Contact <%=contact.account.name%>">#<%=contact.account.name%></a></span>
                        </div>
 
                     </div> 
