start UI on About Case

--- a/templates/opportunities/list.html
+++ b/templates/opportunities/list.html
@@ -210,8 +210,8 @@
                     <div class="desc">
                     <div class="row margin-bottom-5"> 
                        <div class="col-md-12">                         
-                                     <span class="contact-title" ng-show="opp.amount">amount: <%=opp.amount%> </span>
-                                    <span ng-show="opp.stage" class="contact-title" ><br>stage: <a class="desc" href="/#/search/type:Opportunity stage:<%=opp.stage%>">#<%=opp.stage%> </a></span><br>
+                                     <span class="contact-title" ng-show="opp.amount">Amount: <%=opp.amount%> </span>
+                                    <span ng-show="opp.stage" class="contact-title" ><br>stage: <a class="desc" href="/#/search/type:Opportunity stage:<%=opp.stagename%>">#<%=opp.stagename%> </a></span><br>
                                     <span ng-show="opp.description">
                                     <a href="/#/search/type:Opportunity <%=opp.description%>"  class="desc">#<%=opp.description%></a>  
                                     </span>
