--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -271,7 +271,7 @@
                 </div>
 
 
-                <!--HKA 06.03.2014 -->
+                <!--HKA 06.03.2014 About -->
                  <div class="tab-pane active" id="tab_1_2" ng-show="selectedTab == 2">
                         
                         <div class="row">
